# STUDENT-AI-SUPPORT

./: .env  .gitignore  .python-version  README.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  requiremnts.txt  test.py  test_tenant.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  init_db.py  pyproject.toml  requirements.txt  test.py
backend/alembic/: env.py
backend/alembic/versions/: 20260626_01_baseline_reset_schema.py  20260626_02_academic_results_report_cards.py  20260630_01_staging_branch_baseline.py  20260630_02_add_auth_identities_table.py
backend/app/: main.py
backend/app/config/: database.py  logging.py  security.py  settings.py
backend/app/core/: exception_handlers.py  exceptions.py
backend/app/core/dependencies/: __init__.py  auth.py  db.py  permissions.py  route_guards.py
backend/app/core/tenant/: context.py  middleware.py  resolver.py  schema_switcher.py
backend/app/core/utils/: constants.py  email.py  email_templates.py  frontend_urls.py  helpers.py  otp_rate_limiter.py  validators.py
backend/app/modules/: __init__.py
backend/app/modules/AI/: conversation_service.py  schemas.py
backend/app/modules/announcements/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py  utils.py
backend/app/modules/auth_identity/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/classes/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/exams/: models.py  schemas.py  service.py
backend/app/modules/finance/: router.py
backend/app/modules/metrics/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/parents/: models.py  repository.py  router.py  schema.py  schemas.py  service.py
backend/app/modules/report_cards/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/search/: router.py  schemas.py  service.py
backend/app/modules/student_academics/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/students/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/subjects/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/superadmin/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/teachers/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/tenant_admins/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/shared/: base_model.py  exceptions.py  mixins.py  responses.py
backend/app/tenant_management/: models.py  provisioning.py  repository.py  router.py  schemas.py  service.py
backend/docs/auth/: models.md  schema.md  service.md
backend/docs/core/dependencies/: route_guards.md
backend/docs/tenants/: models.md  repository.md  schema.md  service.md
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: database.py  subjects.py  tenants.py
backend/tests/integration/: test_stabilization_flows.py
backend/tests/unit/: test_logging_config.py  test_main_docs_exposure.py
backend/tests/unit/auth/: test_jwt_tokens.py  (+3 more)
(+217 files in other folders)
