[project]
name = "student-ai-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
