[project]
name = "student-ai-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "google>=3.0.0",
    "google-genai>=2.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "twilio>=9.10.9",
    "uvicorn>=0.47.0",
]
