[project]
name = "student-ai-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "aiosmtplib==5.1.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asttokens==3.0.1",
    "asyncpg==0.31.0",
    "attrs==26.1.0",
    "bcrypt==4.2.0",
    "beautifulsoup4==4.14.3",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "cryptography==48.0.0",
    "debugpy==1.8.20",
    "decorator==5.3.1",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "executing==2.2.1",
    "fastapi==0.136.1",
    "frozenlist==1.8.0",
    "google==3.0.0",
    "google-auth==2.53.0",
    "google-genai==2.4.0",
    "greenlet==3.5.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.15",
    "ipykernel==7.2.0",
    "ipython==9.14.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.20.0",
    "jose==1.0.0",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.2",
    "multidict==6.7.1",
    "nest-asyncio==1.6.0",
    "packaging==26.2",
    "parso==0.8.7",
    "passlib==1.7.4",
    "platformdirs==4.10.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.29",
    "pyzmq==27.1.0",
    "requests==2.34.2",
    "resend==2.30.1",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.49",
    "stack-data==0.6.3",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "tornado==6.5.6",
    "traitlets==5.15.0",
    "twilio==9.10.9",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uvicorn==0.47.0",
    "wcwidth==0.7.0",
    "websockets==16.0",
    "yarl==1.24.2",
]
